made victoria line

--- a/tfl-service/src/main/resources/assets/css/main.css
+++ b/tfl-service/src/main/resources/assets/css/main.css
@@ -67,3 +67,7 @@ text {
     font-weight: normal;
     font-style: normal;
 }
+
+.Victoria_FinsburyPark.Victoria_HighburyandIslington {
+	display:none;
+}
