--- a/tfl-service/src/main/resources/assets/css/main.css
+++ b/tfl-service/src/main/resources/assets/css/main.css
@@ -1,69 +1,9 @@
-html, body, .column {
+html, body, {
     height: 100%;
 }
 
 body {
     background: #e5e5e5;
-    font-family: DroidSerifRegular, Georgia, "Times New Roman", serif;
-    text-shadow: 1px 1px 0 #000000;
     color: #e5e5e5;
     cursor: default;
-}
-
-img {
-    vertical-align: top;
-}
-
-text {
-    fill: #e5e5e5;
-    font-size: 0.9em;
-}
-
-.expandable {
-    -webkit-transform: scale(1.0);
-    -webkit-transition: -webkit-transform 0.2s ease-out;
-    -moz-transform: scale(1.0);
-    -moz-transition: -moz-transform 0.2s ease-out;
-}
-
-.expandable:hover {
-    -webkit-transform: scale(1.1);
-    -webkit-transition: -webkit-transform 0.2s ease-in;
-    -moz-transform: scale(1.1);
-    -moz-transition: -moz-transform 0.2s ease-in;
-}
-
-@font-face {
-    font-family: 'ComfortaaBold';
-    src: url('../font/Comfortaa_Bold-webfont.eot');
-    src: url('../font/Comfortaa_Bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../font/Comfortaa_Bold-webfont.woff') format('woff'),
-    url('../font/Comfortaa_Bold-webfont.ttf') format('truetype'),
-    url('../font/Comfortaa_Bold-webfont.svg#ComfortaaBold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'DroidSerifRegular';
-    src: url('../font/DroidSerif-Regular-webfont.eot');
-    src: url('../font/DroidSerif-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../font/DroidSerif-Regular-webfont.woff') format('woff'),
-    url('../font/DroidSerif-Regular-webfont.ttf') format('truetype'),
-    url('../font/DroidSerif-Regular-webfont.svg#DroidSerifRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'DroidSerifItalic';
-    src: url('../font/DroidSerif-Italic-webfont.eot');
-    src: url('../font/DroidSerif-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../font/DroidSerif-Italic-webfont.woff') format('woff'),
-    url('../font/DroidSerif-Italic-webfont.ttf') format('truetype'),
-    url('../font/DroidSerif-Italic-webfont.svg#DroidSerifItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
 }
