--- a/tfl-service/src/main/resources/assets/css/main.css
+++ b/tfl-service/src/main/resources/assets/css/main.css
@@ -1,14 +1,14 @@
-html, body, {
-    height: 100%;
-}
-
 body {
     background: #e5e5e5;
     color: #e5e5e5;
-    cursor: default;
 }
 
-#map {
-	width: 100%;
-	height: 100%;
+#map, #mapold {
+    width: 2426px;
+    height: 1615px;
+    position: absolute;
+}
+
+#mapold {
+    opacity: 0.2;
 }
